--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --background: #13110c;
+}
+
+@layer base {
+    body {
+        background-color: var(--background);
+    }
+}
